Add logger intercepter for easily debug the json response from github service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     // OkHttp 3
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     // Retrofit 2
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
